<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".homepage">

    <item android:id="@+id/menulink_home"
        android:title="@string/menulink_home" />

    <item android:id="@+id/menulink_stats"
        android:title="@string/menulink_stats"
        app:showAsAction="never"/>

    <item android:id="@+id/menulink_routes"
        android:title="@string/menulink_routes"
        app:showAsAction="never"/>

    <item android:id="@+id/menulink_sets"
        android:title="@string/menulink_sets"
        app:showAsAction="never"/>

    <item android:id="@+id/menulink_logout"
        android:title="@string/menulink_logout"
        app:showAsAction="never"/>

</menu>