<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.runningapp.login">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/wallnewer"
                android:orientation="horizontal"
                android:textAlignment="center">


                <TextView
                    android:id="@+id/editText"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/appname"
                    android:fontFamily="cursive"
                    android:scaleType="center"
                    android:layout_width="wrap_content"
                    android:textColor="#ffffff"
                    android:textAlignment="center"
                    android:textSize="40sp" />

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="8dp"
                    android:background="#00000000"
                    android:scaleType="fitStart"
                    app:srcCompat="@drawable/logo" />


            </LinearLayout>


            <TextView
                android:id="@+id/welcomeback_msg"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginTop="100dp"
                android:text="@string/welcomeback_msg"
                android:fontFamily="sans-serif"
                android:scaleType="center"
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:textSize="30sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_marginTop="40dp">

                <ImageView
                    android:id="@+id/usrnameicon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_weight="1"
                    android:scaleType="fitStart"
                    app:srcCompat="@drawable/name" />

                <EditText
                    android:id="@+id/UsernameField"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:ems="10"
                    android:hint="@string/UsernameField"
                    android:inputType="textPersonName"
                    android:textSize="20sp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/pass"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="30dp"
                    android:layout_weight="1"
                    android:scaleType="fitStart"
                    app:srcCompat="@drawable/pass" />

                <EditText
                    android:id="@+id/PasswordField"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:ems="10"
                    android:hint="@string/PasswordField"
                    android:inputType="textPassword"
                    android:textSize="20sp"
                    />

            </LinearLayout>
            <Button
                android:id="@+id/loginfield"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/action_sign_in"
                android:background="#90A4AE"
                android:textColor="#ffffff"
                android:textSize="15sp"
                />
            <Button
                android:id="@+id/signBtn"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/createacc"
                android:background="#90A4AE"
                android:textColor="#ffffff"
                android:textSize="15sp"
                />

        </LinearLayout>

    </ScrollView>
</android.support.v4.widget.DrawerLayout>