<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.runningapp.statistics">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/wallnewer"
                android:orientation="horizontal"
                android:textAlignment="center">

                <ImageButton

                    android:id="@+id/menuLines"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:background="#00000000"
                    android:layout_marginLeft="8dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/menu7" />

                <TextView
                    android:id="@+id/editText"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/appname"
                    android:fontFamily="cursive"
                    android:scaleType="center"
                    android:layout_width="wrap_content"
                    android:textColor="#ffffff"
                    android:textAlignment="center"
                    android:textSize="40sp" />

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="8dp"
                    android:background="#00000000"
                    android:scaleType="fitStart"
                    app:srcCompat="@drawable/logo" />


            </LinearLayout>


            <TextView
                android:id="@+id/statstitle"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:text="@string/statstitle"
                android:textColor="#3389FF"
                android:fontFamily="cursive"
                android:scaleType="center"
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:background="#F5F5F5"

                >


                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="8dp"
                    app:srcCompat="@drawable/cale" />

                <TextView
                    android:id="@+id/selectDateLabel"
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:text="@string/selectDateLabel"

                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/selectDate1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/selectDate1hint"

                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/selectDate2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/selectDate2hint"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:background="#F5F5F5">

                <Button
                    android:id="@+id/showbtn"
                    android:layout_width="130dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:text="@string/showbtn"
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:textSize="15sp"
                    android:background="#90A4AE"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:background="#F5F5F5">

                <ImageView
                    android:id="@+id/weathericon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/speed" />

                <TextView
                    android:id="@+id/avgspeedlabel"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/avgspeedlabel"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    />

                <!-- Changing dynamically always so no need for @string value-->

                <TextView
                    android:id="@+id/avgspeedview"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:textColor="#3389FF"
                    android:text=""
                    android:textSize="20sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:background="#F5F5F5">

                <ImageView
                    android:id="@+id/stepsicon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/steps" />

                <TextView
                    android:id="@+id/avgstepslabel"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/avgstepslabel"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    />

                <!-- Changing dynamically always so no need for @string value-->

                <TextView
                    android:id="@+id/avgstepsview"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:textColor="#3389FF"
                    android:text=""
                    android:textSize="20sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:background="#F5F5F5">

                <ImageView
                    android:id="@+id/caloriesicon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/kcal" />

                <TextView
                    android:id="@+id/calories"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/calories"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    />

                <!-- Changing dynamically always so no need for @string value-->

                <TextView
                    android:id="@+id/kcal"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:textColor="#3389FF"
                    android:text=""
                    android:textSize="20sp" />


            </LinearLayout>

            <TextView
                android:id="@+id/graphlabel1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/graphlabel1"
                android:textSize="20sp" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/kmrunChart"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="8dp"
                android:background="#ffffff"></com.github.mikephil.charting.charts.LineChart>
            <TextView
                android:id="@+id/graphlabel2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/graphlabel2"
                android:textSize="20sp" />
            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/caloriesChart"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="250dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="#ffffff"
                >
            </com.github.mikephil.charting.charts.LineChart>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#F5F5F5"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/graphlabel3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/graphlabel3"
                android:textSize="20sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="     "
                android:textSize="20sp"
                />
            <TextView
                android:id="@+id/durSumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp" />

        </LinearLayout>
            <lecho.lib.hellocharts.view.PieChartView
                android:id="@+id/durSumChart"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_width="match_parent"
                android:layout_height="300dp" />
        </LinearLayout>

    </ScrollView>

</android.support.v4.widget.DrawerLayout>