<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.runningapp.homepage">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/wallnewer"
                android:orientation="horizontal"
                android:textAlignment="center">

                <ImageButton

                    android:id="@+id/menuLines"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:background="#00000000"
                    android:layout_marginLeft="8dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/menu7" />

                <TextView
                    android:id="@+id/editText"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/appname"
                    android:fontFamily="cursive"
                    android:scaleType="center"
                    android:layout_width="wrap_content"
                    android:textColor="#ffffff"
                    android:textAlignment="center"
                    android:textSize="40sp" />

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="8dp"
                    android:background="#00000000"
                    android:scaleType="fitStart"
                    app:srcCompat="@drawable/logo" />


            </LinearLayout>



            <TextView
                android:id="@+id/todaylabel"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/routedetails"
                android:layout_marginTop="20dp"
                android:textColor="#3389FF"
                android:fontFamily="cursive"
                android:scaleType="center"
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:background="#F5F5F5">

                <!-- Changing dynamically always so no need for @string value-->
                <TextView
                    android:id="@+id/avgSpeedLabel"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Average Speed"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    />

                <!-- Changing dynamically always so no need for @string value-->

                <TextView
                    android:id="@+id/avgSpeed"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:textColor="#3389FF"
                    android:textSize="20sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:background="#F5F5F5">

                <TextView
                    android:id="@+id/distLabel"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/dist"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <!-- Changing dynamically always so no need for @string value-->

                <TextView
                    android:id="@+id/dist"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:textColor="#3389FF"
                    android:textSize="20sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:background="#F5F5F5">

                <TextView
                    android:id="@+id/strtTimeLabel"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/starttime"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    />

                <!-- Changing dynamically always so no need for @string value-->

                <TextView
                    android:id="@+id/strtTime"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:textColor="#3389FF"
                    android:textSize="20sp" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/durationLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="#F5F5F5"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/duration"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/duration"
                    android:textColor="#000000"
                    android:textSize="20sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/strtpointLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="#F5F5F5"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/strtpoint"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/startpoint"
                    android:textColor="#000000"
                    android:textSize="20sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/endpointLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="#F5F5F5"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/endpoint"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/endpoint"
                    android:textColor="#000000"
                    android:textSize="20sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/steplabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="#F5F5F5"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/steps"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/Steps"
                    android:textColor="#000000"
                    android:textSize="20sp" />


            </LinearLayout>

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="274dp"
                android:layout_marginTop="10dp" />


        </LinearLayout>

    </ScrollView>

</android.support.v4.widget.DrawerLayout>